2006-09-14  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* configure.in: Bump the required version of pango to 1.10.3 to fix a
	bug in earlier versions about scaling matrix not being applied properly
	to the fonts.

2006-09-12  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* docs/gnuplot.doc (format specifiers): Fix typo in one example.

2006-09-11  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/wxt_gui.cpp (wxtConfigDialog::OnButton):
	* src/wxterminal/wxt_gui.h (wxt_settings_queue, wxt_settings_apply):
	Queue the modified rendering settings instead of applying them right
	away, so that the plot is not messed up during a window resize.

2006-09-10  Timothee Lecomte  <timothee.lecomte@ens.fr>

	* src/wxterminal/gp_cairo.c (gp_cairo_draw_text): Fix the use of the
	Symbol font in non-enhanced mode, a peace of code was not pasted
	properly.

	* src/wxterminal/wxt_gui.cpp (wxt_set_font): Fix the use of a
	non-initialized integer as the fontsize.

2006-09-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc: Sync Japanese documentation to recent changes in
	English files. SF Patch [1519215], rev.1.385.

2006-09-01  Juergen Wieferink  <wieferink@freenet.de>

	* src/command.c (string_expand): Fix segfault if a truly enormous
	string is to be used as an input line.

2006-09-01  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc: Edits of the "What is new in gnuplot 4.2".

	* docs/gnuplot.doc term/x11.trm: Comments on 'raise' does not raise.

2006-08-30  Harald Harders  <h.harders@tu-bs.de>

	* src/graphics.c (place_arrows): Allow for terminal-specific clipping,
	exactly as done elsewhere in the code.

2006-08-30  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (do_plot): The border attribute of fill style was
	ignored by filledcurves. Change this to match all other places where
	fillstyle is honored.

2006-08-28  Lars Hecking  <lhecking@users.sourceforge.net>
